# bridge-native

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
buildozer_workspace/: buildozer.spec  main.py
buildozer_workspace/erplora_bridge/: __init__.py  protocol.py  server_android.py
buildozer_workspace/erplora_bridge/hardware/: discovery.py  scanner.py
erplora_bridge/: __main__.py  config.py  protocol.py  server.py  server_android.py
erplora_bridge/hardware/: __init__.py  discovery.py  drawer.py  printer.py
