[project]
name = "erplora-bridge"
version = "0.1.0"
description = "ERPlora Hardware Bridge — connects Hub with local printers, drawers, and scanners"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "python-escpos>=3.0",
    "pyserial>=3.5",
    "pyusb>=1.2.1",
    "zeroconf>=0.131.0",
    "qrcode>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
erplora-bridge = "erplora_bridge.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
